--- a/css/styles.css
+++ b/css/styles.css
@@ -1,76 +1,3 @@
-
-
-
-h1 {
-  margin-bottom: 0;
-}
-h1 + p {
-  font-size: 1.08em;
-  color: #637a91;
-  margin-top: .5em;
-  margin-bottom: 2.65em;
-  padding-bottom: 1.325em;
-  border-bottom: 1px dotted;
-}
-ul {
-  padding-left: 0;
-  list-style: none;
-}
-li {
-  padding: .45em .5em;
-  margin-bottom: .35em;
-  display: flex;
-  align-items: center;
-}
-input,
-button {
-  font-size: .85em;
-  padding: .65em 1em;
-  border-radius: .3em;
-  outline: 0;
-}
-
-div {
-  margin-top: 2.8em;
-  padding: 1.5em 0 .5em;
-  border-top: 1px dotted #637a91;
-}
-p.description,
-p:nth-of-type(2) {
-  font-weight: bold;
-}
-/* Buttons */
-button {
-  color: white;
-  background: #508abc;
-  border: solid 1px;
-  border-color: rgba(0, 0, 0, .1);
-  cursor: pointer;
-}
-button + button {
-  margin-left: .5em;
-}
-p + button {
-  background: #52bab3;
-}
-.list button + button {
-  background: #768da3;
-}
-.list li button + button {
-  background: #508abc;
-}
-li button:first-child {
-  margin-left: auto;
-  background: #52bab3;
-}
-.list li button:last-child {
-  background: #768da3;
-}
-li button {
-  font-size: .75em;
-  padding: .5em .65em;
-}
-
 html {
   background: #eee;
 }
@@ -101,23 +28,31 @@ body {
 .main-content {
   background: #fff;
   border-radius: 4px;
-  padding: 24px;
   margin: 0 auto;
   max-width: 960px;
+  box-shadow: 0px 3px 6px #d5d3d3;
+}
+.background-grey {
+  padding: 24px 38px;
+  background: #eff4f4;
 }
 .todo-form {
   display: flex;
-  margin-bottom: 20px
-}
+  font-size: 1.2em;
+  margin-bottom: 20px;
+  }
 input {
   border: 1px solid #dcdcdc;
 }
-
+.toggle-section {
+  font-size: 1.2em;
+  display: flex;
+}
 ul.todo-list {
   list-style: none;
   margin: 0;
-  padding: 0;
-  font-size: 1.1rem;
+  font-size: 1rem;
+  padding:  0 24px 24px 24px;
 }
 ul.todo-list li {
   display: flex;
@@ -160,6 +95,7 @@ ul.todo-list li:last-child {
 }
 .btn {
   border: none;
+  font-size: .8em;
   padding: 12px 8px;
   color: #fff;
   background-color: #70dbad;
@@ -168,6 +104,7 @@ ul.todo-list li:last-child {
   min-width: 70px;
   text-transform: uppercase;
   border-radius: 4px;
+  font-weight: 600;
 }
 
 .btn--link {
